--- a/01-intro/homework/homework.ipynb
+++ b/01-intro/homework/homework.ipynb
@@ -10,12 +10,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "docker run -it \\\n",
     "    --name elasticsearch \\\n",
@@ -26,17 +24,18 @@
     "    docker.elastic.co/elasticsearch/elasticsearch:8.4.3\n",
     "\n",
     "\n",
-    "\n",
     "curl localhost:9200"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "raw"
+     "languageId": "powershell"
     }
    },
+   "outputs": [],
    "source": [
     "{\n",
     "  \"name\" : \"fda132c75914\",\n",
